# RoboSoccer

./: .gitignore  README.md
include/libmath/: euler.h  matrix.h  normaldev.h  nr3.h  symrad.h  vector3d.h
include/roboctrl/: kogmo_rtdb_obj_rfb.h  pololu_cmd.h  pololu_referee.h  pololu_status.h  position.h  referee.h  rmath.h  robo_control.h  share.h
include/roboctrl2/: angle.h  cam.h  error.h  helpers.h  pololu_localize.h  position.h  raw_ball.h  robo_control.h  share.h
include/rtdb/: kogmo_rtdb.h  kogmo_rtdb.hxx  kogmo_rtdb_funcs.h  kogmo_rtdb_obj_a2.h  kogmo_rtdb_obj_a2_classes.hxx  kogmo_rtdb_obj_base.h  kogmo_rtdb_obj_base_classes.hxx  kogmo_rtdb_obj_base_funcs.h  kogmo_rtdb_obj_c3.h  kogmo_rtdb_obj_c3_funcs.c  kogmo_rtdb_obj_c3_funcs.h  kogmo_rtdb_obj_defs.h  kogmo_rtdb_obj_funcs.h  kogmo_rtdb_obj_packing.h  kogmo_rtdb_obj_typeids.h  kogmo_rtdb_types.h  kogmo_time.h
simulator/: Readme.txt
simulator/build-soccer_sample-Desktop-Debug/: Makefile
simulator/include/: settings.pri
simulator/workspace/: CMakeLists.txt  Makefile  Readme.txt  cmake_install.cmake  settings.pri  soccer_sample.pro
simulator/workspace/libraries/kogmo/include/: kogmo_rtdb_obj_base_funcs.c
simulator/workspace/libraries/kogmo/include/c3/: kogmo_rtdb_obj_c3_funcs.c  kogmo_rtdb_obj_c3_test.h
simulator/workspace/libraries/libmath/include/: rmath.h  rvector.h
simulator/workspace/libraries/libpololurtdb/include/: array.h  cam.h  ran.h  rmath.h  robo_control.h  share.h  symrad.h
simulator/workspace/src/: soccer_sample.cpp
workspace/: Doxyfile  soccerMain.pro
(+117 files in other folders)
